# ndxr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: config.rs  lib.rs  main.rs  status.rs  upgrade.rs  util.rs  watcher.rs  workspace.rs
src/capsule/: builder.rs  mod.rs  relaxation.rs
src/embeddings/: download.rs  mod.rs  model.rs  similarity.rs  storage.rs
src/graph/: builder.rs  centrality.rs  intent.rs  mod.rs  pathfinding.rs  scoring.rs  search.rs
src/indexer/: edge_resolver.rs  manifest.rs  mod.rs  parser.rs  symbols.rs  tokenizer.rs  walker.rs
src/languages/: bash.rs  c_lang.rs  cpp.rs  csharp.rs  go_lang.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs  zig.rs
src/mcp/: mod.rs  server.rs
src/memory/: antipatterns.rs  capture.rs  changes.rs  compression.rs  mod.rs  search.rs  staleness.rs  store.rs
src/skeleton/: mod.rs  reducer.rs
src/storage/: db.rs  mod.rs
tests/: logic_flow.rs  symbol_changes.rs  test_capsule.rs  test_cli.rs  test_e2e.rs  test_embeddings.rs  test_indexer.rs  test_integration.rs  test_mcp.rs  test_mcp_protocol.rs  test_memory.rs  test_parser.rs  test_search.rs  test_smoke_capsule.rs  test_smoke_indexer.rs  test_smoke_memory.rs  test_smoke_search.rs  test_storage.rs  test_upgrade.rs  test_walker.rs  test_workspace.rs
tests/helpers/: mod.rs
