[package]
name = "ndxr"
version = "0.8.0"
edition = "2024"
license = "Apache-2.0"
description = "Local-first context engine for AI coding agents"

[dependencies]
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-php = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
petgraph = { version = "0.8", features = ["rayon"] }
rusqlite = { version = "0.38", features = ["bundled"] }
blake3 = "1"
rayon = "1"
notify = "8"
ignore = "0.4"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "8"
self-replace = "1"
tempfile = "3"
tract-onnx = "0.21"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
rmcp = { version = "1.2", features = ["client", "transport-io"] }

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "warn"
